fix: исправлено загрузка образа для сервиса backend, окружение сделано глобально

--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:postgresql://db:15432/Django
-spring.kafka.bootstrap-servers=localhost:9093
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.kafka.bootstrap-servers=kafka:9092
