hotfix: убрал токен тг...

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ KAFKA_SERVERS=kafka:9092
 BACKEND_API_ADDRESS=http://backend:8080/api
 
 # Telegram Bot
-TG_TOKEN=7321331345:AAF2Yzh8RJdYCodW0qcKC7zf-X0k7UlX39c
+TG_TOKEN=(тут должен быть ваш токен тгбота)
 TG_USERNAME=admin
 TG_PASSWORD=admin
 TG_ADMIN_KEY=admin_artur
