--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ KAFKA_SERVERS=kafka:9092
 # Backend API
 BACKEND_API_ADDRESS=http://backend:8080/api
 
-# Telegram Bot
+# Telegram Bot 8
 TG_TOKEN=(тут должен быть ваш токен тгбота)
 TG_USERNAME=admin
 TG_PASSWORD=admin
