Добавлены тесты, улучшена логика работы с абитуриентами, реализован поиск по фото и ID, настроено HTTPS

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
 spring.kafka.bootstrap-servers=localhost:9093
 spring.datasource.url=jdbc:postgresql://localhost:15432/Django
+spring.datasource.username=postgres
+spring.datasource.password=admin
