--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    volumes:
+      - student_images:/app/images
     ports:
       - "8080:8080"
     depends_on:
@@ -96,23 +98,25 @@ services:
     networks:
       - app-network
 
+
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_BASE_URL=${VITE_BASE_URL}
+        - VITE_BACKEND_URL=${VITE_BACKEND_URL}
     ports:
-      - "80:80"
-    depends_on:
-      - backend
+      - "3000:3000"
     networks:
       - app-network
-    env_file:
-      - .env
     environment:
       - VITE_BASE_URL=${VITE_BASE_URL}
+      - VITE_BACKEND_URL=${VITE_BACKEND_URL}
 
 volumes:
   pgdata:
+  student_images:
 
 networks:
   app-network:
