update: подключен server discovery. Изменена логика обработки, теперь в брокер попадают только завявки, а дальше синхронно идет обработка. Настройка feign клиента и сервера для общения между микросервисами. Частично произведен рефакторинг. Разгружен сервис Applicant. Добавлена сущность ApplicantTask, которая хранит все таски которые ушли в брокер. Исправлены образы для сервисов, перенесено с debian на ubuntu.

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -2,3 +2,6 @@ spring.kafka.bootstrap-servers=localhost:9093
 spring.datasource.url=jdbc:postgresql://localhost:15432/Django
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
