--- a/number-reader/Dockerfile
+++ b/number-reader/Dockerfile
@@ -1,20 +1,18 @@
-FROM python:3.10-slim
+FROM ubuntu:22.04
 
 ARG VERSION=1.0.0
 LABEL version=$VERSION
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN find /etc/apt/ -name '*.list' -exec sed -i 's|http://deb.debian.org/debian|http://ftp.debian.org/debian|g' {} +
-
-RUN bash -c '\
-    apt-get update && \
-    for i in 1 2 3 4 5; do \
-      apt-get install -y --no-install-recommends --fix-missing \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
         build-essential \
+        python3.10 \
+        python3-pip \
+        python3-dev \
         gcc \
         g++ \
-        python3-dev \
         libffi-dev \
         libssl-dev \
         libgl1 \
@@ -23,17 +21,18 @@ RUN bash -c '\
         libxext6 \
         libxrender-dev \
         netcat-openbsd \
-        libjansson-dev \
-        && break || echo "Попытка $i не удалась, жду 5 секунд..." && sleep 5; \
-    done && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* \
-'
+        libjansson-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN ln -s /usr/bin/python3.10 /usr/local/bin/python
 
 WORKDIR /app
 
 COPY . .
 
-RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY wait-for-kafka.sh /wait-for-kafka.sh
 RUN chmod +x /wait-for-kafka.sh
