update: Добавлен Redis в качестве кэша. Поправлены незначительные проблемы. Добавлены тесты для распознования лица, распознования номера.

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,3 +5,7 @@ spring.datasource.password=admin
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
