--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.springframework.kafka:spring-kafka'
@@ -45,6 +46,7 @@ dependencies {
 	testImplementation 'junit:junit:4.13.2'
 	testImplementation 'org.mockito:mockito-core:4.11.0'
 	testImplementation 'com.h2database:h2'
+
 }
 
 test {
